# QA-with-RAG

./: Dockerfile_app  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
src/dtypes/: __init__.py  base_class.py  pdf.py
src/llm/: __init__.py  llm_interface.py  prompts.py
src/user_docs/: README.md
src/utils/: __init__.py  file_loader.py  helper_functions.py
src/vector_db/: __init__.py  db_interface.py  faiss_db.py
