[tool.poetry]
name = "qa-with-rag"
version = "0.1.0"
description = "Question answering system empowered with retrieval-augmented generation"
authors = ["Maryam Yazdi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
async-timeout = "4.0.3"
black = "24.8.0"
exceptiongroup = "1.2.2"
faiss-cpu = "1.8.0.post1"
fqdn = "1.5.1"
ipywidgets = "8.1.3"
isoduration = "20.11.0"
jupyter-console = "6.6.3"
jupyterlab-git = "0.50.1"
langchain-text-splitters = "0.2.2"
llama-index = "0.10.65"
notebook = "7.2.1"
ollama = "0.3.1"
pipdeptree = "2.23.4"
plotly = "5.23.0"
pymupdf = "1.24.9"
qtconsole = "5.5.2"
seaborn = "0.13.2"
sentence-transformers = "3.0.1"
streamlit = "1.37.1"
tomli = "2.0.1"
uri-template = "1.3.0"
webcolors = "24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
